--- a/css/style.css
+++ b/css/style.css
@@ -341,7 +341,7 @@ input {
 /*--------------about--------*/
 /*--------------wrapper--------*/
 .wrapper {
-  background-image: url("../image/ami.jpg");
+  background-image: url("../image/img/Canadian.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -421,7 +421,7 @@ input {
 /*--------------room--------*/
 /*--------------wrapper2--------*/
 .wrapper2 {
-  background-image: url("../image/w1.jpg");
+  background-image: url("../image/img/car.jpg");
 }
 
 .wrapper2 .text {
